--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <main>
         <section id="hero" class="hero-section">
             <div class="hero-content">
-                <img src="https://via.placeholder.com/150" alt="Profile Picture" class="profile-pic">
+                <img src="ads creatives/Screenshot_20250718_131129_WhatsApp.jpg" alt="Profile Picture" class="profile-pic">
                 <h1>ADEDINI RIDWAN</h1>
                 <h2>BRAND MARKETER | Ads, Email, SEO, Social Media Marketing, and Landing Pages</h2>
             </div>
@@ -153,9 +153,12 @@
             </div>
             <div class="works-gallery-container">
                 <div class="works-gallery" id="ads-creatives">
-                    <img src="https://via.placeholder.com/300" alt="Ad Creative 1">
-                    <img src="https://via.placeholder.com/300" alt="Ad Creative 2">
-                    <img src="https://via.placeholder.com/300" alt="Ad Creative 3">
+                    <img src="ads creatives/speed.jpg" alt="Ad Creative 1">
+                    <img src="ads creatives/beauty.jpg" alt="Ad Creative 2">
+                    <img src="ads creatives/confi.jpg" alt="Ad Creative 3">
+                    <img src="ads creatives/confi rom.jpg" alt="Ad Creative 1">
+                    <img src="ads creatives/bliss.jpg" alt="Ad Creative 2">
+                    <img src="ads creatives/church.jpg" alt="Ad Creative 3">
                 </div>
                 <div class="works-gallery hidden" id="social-media-designs">
                     <img src="https://via.placeholder.com/300/F39C12" alt="Social Media Design 1">
