--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section id="hero" class="hero-section">
             <div class="hero-content">
                 <img src="ads creatives/Screenshot_20250718_131129_WhatsApp.jpg" alt="Profile Picture" class="profile-pic">
-                <h1>ADEDINI RIDWAN</h1>
+                <h1>ADEDINI RIDWAN IFEOLUWA </h1>
                 <h2>BRAND MARKETER | Ads, Email, SEO, Social Media Marketing, and Landing Pages</h2>
             </div>
         </section>
@@ -455,3 +455,4 @@
 });</script>
 </body>
 </html>
+
