--- a/index.html
+++ b/index.html
@@ -118,28 +118,84 @@
             <h2>Tools</h2>
             <div class="tools-grid">
                 <div class="tool-item">
-                    <img src="https://via.placeholder.com/50/FF5733/FFFFFF?text=PS" alt="Photoshop">
-                    <p>Photoshop</p>
+                    <img src="Tools/Buffer.png" alt="Buffer">
+                    <p>buffer</p>
                 </div>
                 <div class="tool-item">
-                    <img src="https://via.placeholder.com/50/3498DB/FFFFFF?text=Ca" alt="Canva">
+                    <img src="Tools/canva.jpeg" alt="Canva">
                     <p>Canva</p>
                 </div>
                 <div class="tool-item">
-                    <img src="https://via.placeholder.com/50/27AE60/FFFFFF?text=Fi" alt="Figma">
-                    <p>Figma</p>
+                    <img src="Tools/tiktok.avif" alt="Tiktok ad manager">
+                    <p>Tiktok ads Manager</p>
                 </div>
                 <div class="tool-item">
-                    <img src="https://via.placeholder.com/50/F39C12/FFFFFF?text=ME" alt="Mailchimp">
+                    <img src="Tools/mailchimp.png" alt="Mailchimp">
                     <p>Mailchimp</p>
                 </div>
                 <div class="tool-item">
-                    <img src="https://via.placeholder.com/50/8E44AD/FFFFFF?text=GA" alt="Google Analytics">
+                    <img src="Tools/google analytics.png" alt="Google Analytics">
                     <p>Google Analytics</p>
                 </div>
                 <div class="tool-item">
-                    <img src="https://via.placeholder.com/50/1ABC9C/FFFFFF?text=SE" alt="SEMRush">
+                    <img src="Tools/semrush.png" alt="SEMRush">
                     <p>SEMRush</p>
+                </div>
+                <div class="tool-item">
+                    <img src="Tools/meta ads.jpeg" alt="Meta Ads Manager">
+                    <p>Meta Ads Manager</p>
+                </div>
+                <div class="tool-item">
+                    <img src="Tools/google ads.png" alt="Google Ads">
+                    <p>Google ads</p>
+                </div>
+                <div class="tool-item">
+                    <img src="Tools/klaviyo.jpeg" alt="Klaviyo">
+                    <p>Klaviyo</p>
+                </div>
+                <div class="tool-item">
+                    <img src="Tools/elementor.jpeg" alt="Elementor">
+                    <p>Elementor</p>
+                </div>
+                <div class="tool-item">
+                    <img src="Tools/yoast.png" alt="yoast">
+                    <p>Yoast</p>
+                </div>
+                <div class="tool-item">
+                    <img src="Tools/google sheet.png" alt="google  sheets">
+                    <p>Google sheets</p>
+                </div>
+                <div class="tool-item">
+                    <img src="Tools/microsoft excel.jpeg" alt="Microsoft Excel">
+                    <p>Microsoft Excel</p>
+                </div>
+                <div class="tool-item">
+                    <img src="Tools/hunter.png" alt="hunter.io">
+                    <p>Hunter.Io</p>
+                </div>
+                <div class="tool-item">
+                    <img src="Tools/linkedin sales navigator.jpeg" alt="Linkedin sales navigator">
+                    <p>Linkedin sales Navigator</p>
+                </div>
+                <div class="tool-item">
+                    <img src="Tools/hootsuite.png" alt="Hootsuite">
+                    <p>Hootsuite</p>
+                </div>
+                <div class="tool-item">
+                    <img src="Tools/zapier.png" alt="zapier">
+                    <p>Zapier</p>
+                </div>
+                <div class="tool-item">
+                    <img src="Tools/hubspot.png" alt="hubsopt">
+                    <p>Hubspot</p>
+                </div>
+                <div class="tool-item">
+                    <img src="Tools/apollo.io.png" alt="Apollo.io">
+                    <p>Apollo.io</p>
+                </div>
+                <div class="tool-item">
+                    <img src="Tools/zoho.png" alt="zoho">
+                    <p>Zoho</p>
                 </div>
             </div>
         </section>
@@ -184,17 +240,17 @@
                 <div class="testimonials-carousel-inner">
                     <div class="testimonial-card glassmorphism-card">
                         <div class="client-info">
-                            <img src="https://via.placeholder.com/50" alt="Client 1" class="client-pic">
-                            <p class="client-name">John Doe</p>
+                            <img src="testimonials/barrybree.jpg" alt="Client 1" class="client-pic">
+                            <p class="client-name">Barrybree Distribution</p>
                         </div>
                         <p class="testimonial-text">"Ridwan's work on our social media ads was phenomenal. We saw a 200% increase in our conversion rate. Highly recommend!"</p>
                     </div>
                     <div class="testimonial-card glassmorphism-card">
                         <div class="client-info">
-                            <img src="https://via.placeholder.com/50" alt="Client 2" class="client-pic">
-                            <p class="client-name">Jane Smith</p>
+                            <img src="testimonials/lokalfy.jpg" alt="Client 2" class="client-pic">
+                            <p class="client-name">Angelo(Lokalfy)</p>
                         </div>
-                        <p class="testimonial-text">"His email marketing strategy was a game-changer for our business. The results speak for themselves."</p>
+                        <p class="testimonial-text">"He was able to generate active leads of traders and farmers for our local trade connect business. The results speak for themselves."</p>
                     </div>
                     <div class="testimonial-card video-card">
                         <a href="https://www.youtube.com/embed/dQw4w9WgXcQ" class="video-thumbnail-link" data-video>
@@ -455,5 +511,3 @@
 });</script>
 </body>
 </html>
-
-
