--- a/index.html
+++ b/index.html
@@ -307,9 +307,9 @@
     <footer>
         <div class="footer-content">
             <div class="social-icons">
-                <a href="mailto:adediniridwan@example.com" aria-label="Email"><ion-icon name="mail-outline"></ion-icon></a>
-                <a href="https://www.linkedin.com/in/adediniridwan" aria-label="LinkedIn"><ion-icon name="logo-linkedin"></ion-icon></a>
-                <a href="tel:+1234567890" aria-label="Phone"><ion-icon name="call-outline"></ion-icon></a>
+                <a href="mailto:adediniridwan@gmail.com" aria-label="Email"><ion-icon name="mail-outline"></ion-icon></a>
+                <a href="https://www.linkedin.com/in/adedini-ridwan-665160258" aria-label="LinkedIn"><ion-icon name="logo-linkedin"></ion-icon></a>
+                <a href="tel:+2347062638690" aria-label="Phone"><ion-icon name="call-outline"></ion-icon></a>
             </div>
             <p>&copy; 2025 ADEDINI RIDWAN. All rights reserved.</p>
         </div>
