--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
             <div class="about-carousel-container">
                 <div class="about-carousel-inner">
                     <div class="about-page">
-                        <p>Page 1: A brief introduction to who I am and my journey into marketing.</p>
+                        <p>I’m Adedini Ridwan, a marketing expert passionate about driving business growth. My journey began with a love for how brands connect with people online. From exploring SEO and social media to mastering lead generation and analytics, I’ve built a career helping businesses achieve measurable success through creative, data-driven strategies.</p>
                     </div>
                     <div class="about-page">
-                        <p>Page 2: My core philosophy on brand building and audience engagement.</p>
+                        <p>I believe brands thrive by building authentic connections. My approach focuses on understanding audiences and creating engaging content through SEO, social media, or emails that feels personal and drives loyalty. It’s about telling stories that resonate and spark action.</p>
                     </div>
                     <div class="about-page">
-                        <p>Page 3: The passion that drives me to create impactful campaigns.</p>
+                        <p>I’m driven by the excitement of crafting campaigns that make an impact. Whether it’s boosting conversions or growing engagement, I love turning ideas into results. Seeing businesses succeed through my work fuels my creativity and commitment to excellence.</p>
                     </div>
                     <div class="about-page">
-                        <p>Page 4: A deeper look into the problems I love solving for businesses.</p>
+                        <p>I tackle challenges like low traffic, weak leads, and poor engagement. Using SEO, I boost visibility. With lead generation, I attract the right customers. My blog content, emails, social posts, case studies captivates and converts, while analytics ensure every move delivers ROI.</p>
                     </div>
                     <div class="about-page">
-                        <p>Page 5: My vision for the future of digital marketing.</p>
+                        <p>I see a future where AI and data enhance personalized marketing. Brands will use real-time insights and immersive storytelling to connect deeply with audiences. My goal is to help businesses lead this shift, using innovative tools to drive growth.</p>
                     </div>
                 </div>
                 <div class="carousel-dots"></div>
@@ -285,7 +285,9 @@
 
         <section id="contact" class="contact-section">
             <h2>Contact</h2>
-            <form id="contact-form">
+            <form id="contact-form" 
+            action="https://formspree.io/f/mldlyeka"
+            method="post">
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" required>
