--- a/index.html
+++ b/index.html
@@ -284,26 +284,27 @@
         </section>
 
         <section id="contact" class="contact-section">
-            <h2>Contact</h2>
-            <form id="contact-form" 
-            action="https://formspree.io/f/mldlyeka"
-            method="post">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" rows="5" required></textarea>
-                </div>
-                <button type="submit" class="submit-button">Send Message</button>
-                <div id="form-message" class="form-message"></div>
-            </form>
-        </section>
+    <h2>Contact</h2>
+    <form id="contact-form" action="https://formspree.io/f/mldlyeka" method="POST">
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required>
+        </div>
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+            <label for="message">Message</label>
+            <textarea id="message" name="message" rows="5" required></textarea>
+        </div>
+        <input type="hidden" name="_subject" value="New Contact Form Submission from Portfolio">
+        <input type="hidden" name="_next" value="https://yourdomain.com/#contact">
+        <input type="hidden" name="_captcha" value="true">
+        <button type="submit" class="submit-button">Send Message</button>
+        <div id="form-message" class="form-message"></div>
+    </form>
+</section>
     </main>
 
     <footer>
