--- a/index.html
+++ b/index.html
@@ -285,25 +285,37 @@
 
         <section id="contact" class="contact-section">
     <h2>Contact</h2>
-    <form id="contact-form" action="https://formspree.io/f/mldlyeka" method="POST">
-        <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" required>
-        </div>
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
-        </div>
-        <div class="form-group">
-            <label for="message">Message</label>
-            <textarea id="message" name="message" rows="5" required></textarea>
-        </div>
-        <input type="hidden" name="_subject" value="New Contact Form Submission from Portfolio">
-        <input type="hidden" name="_next" value="https://yourdomain.com/#contact">
-        <input type="hidden" name="_captcha" value="true">
-        <button type="submit" class="submit-button">Send Message</button>
-        <div id="form-message" class="form-message"></div>
-    </form>
+   <form
+  action="https://formspree.io/f/mldlyeka"
+  class="fs-form"
+  target="_top"
+  method="POST"
+>
+  <div class="fs-field">
+    <label class="fs-label" for="name">Your Name</label>
+    <input class="fs-input" id="name" name="name" required />
+  </div>
+  <div class="fs-field">
+    <label class="fs-label" for="email">Email</label>
+    <input class="fs-input" id="email" name="email" required />
+    <p class="fs-description">
+      This will help me respond to your query via an email.
+    </p>
+  </div>
+  <div class="fs-field">
+    <label class="fs-label" for="message">Message</label>
+    <textarea
+      class="fs-textarea"
+      id="message"
+      name="message"
+      required
+    ></textarea>
+    <p class="fs-description">What would you like to discuss?</p>
+  </div>
+  <div class="fs-button-group">
+    <button class="fs-button" type="submit">Submit</button>
+  </div>
+</form>
 </section>
     </main>
 
