--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <p>Yoast</p>
                 </div>
                 <div class="tool-item">
-                    <img src="Tools/google sheet.png" alt="google  sheets">
+                    <img src="Tools/google sheet.png" alt="google sheets">
                     <p>Google sheets</p>
                 </div>
                 <div class="tool-item">
@@ -209,21 +209,51 @@
                 <button class="works-tab" data-category="results">Results</button>
             </div>
             <div class="works-gallery-container">
-                <div class="works-gallery" id="ads-creatives">
-                    <img src="ads creatives/speed.jpg" alt="Ad Creative 1">
-                    <img src="ads creatives/beauty.jpg" alt="Ad Creative 2">
-                    <img src="ads creatives/confi.jpg" alt="Ad Creative 3">
-                    <img src="ads creatives/confi rom.jpg" alt="Ad Creative 1">
-                    <img src="ads creatives/bliss.jpg" alt="Ad Creative 2">
-                    <img src="ads creatives/church.jpg" alt="Ad Creative 3">
+                <div class="works-gallery-grid" id="ads-creatives">
+                    <div class="gallery-item">
+                        <img src="ads creatives/speed.jpg" alt="Ad Creative 1">
+                        <div class="gallery-caption">Speed Campaign</div>
+                    </div>
+                    <div class="gallery-item">
+                        <img src="ads creatives/beauty.jpg" alt="Ad Creative 2">
+                        <div class="gallery-caption">Beauty Campaign</div>
+                    </div>
+                    <div class="gallery-item">
+                        <img src="ads creatives/confi.jpg" alt="Ad Creative 3">
+                        <div class="gallery-caption">Confidence Campaign</div>
+                    </div>
+                    <div class="gallery-item">
+                        <img src="ads creatives/confi rom.jpg" alt="Ad Creative 4">
+                        <div class="gallery-caption">Confidence Romance Campaign</div>
+                    </div>
+                    <div class="gallery-item">
+                        <img src="ads creatives/bliss.jpg" alt="Ad Creative 5">
+                        <div class="gallery-caption">Bliss Campaign</div>
+                    </div>
+                    <div class="gallery-item">
+                        <img src="ads creatives/church.jpg" alt="Ad Creative 6">
+                        <div class="gallery-caption">Church Campaign</div>
+                    </div>
                 </div>
-                <div class="works-gallery hidden" id="social-media-designs">
-                    <img src="https://via.placeholder.com/300/F39C12" alt="Social Media Design 1">
-                    <img src="https://via.placeholder.com/300/F39C12" alt="Social Media Design 2">
+                <div class="works-gallery-grid hidden" id="social-media-designs">
+                    <div class="gallery-item">
+                        <img src="https://via.placeholder.com/300/F39C12" alt="Social Media Design 1">
+                        <div class="gallery-caption">Social Media Post 1</div>
+                    </div>
+                    <div class="gallery-item">
+                        <img src="https://via.placeholder.com/300/F39C12" alt="Social Media Design 2">
+                        <div class="gallery-caption">Social Media Post 2</div>
+                    </div>
                 </div>
-                <div class="works-gallery hidden" id="results">
-                    <img src="https://via.placeholder.com/300/1ABC9C" alt="Results 1">
-                    <img src="https://via.placeholder.com/300/1ABC9C" alt="Results 2">
+                <div class="works-gallery-grid hidden" id="results">
+                    <div class="gallery-item">
+                        <img src="https://via.placeholder.com/300/1ABC9C" alt="Results 1">
+                        <div class="gallery-caption">Results Chart 1</div>
+                    </div>
+                    <div class="gallery-item">
+                        <img src="https://via.placeholder.com/300/1ABC9C" alt="Results 2">
+                        <div class="gallery-caption">Results Chart 2</div>
+                    </div>
                 </div>
             </div>
         </section>
