--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marketing Automation Specialist Portfolio</title>
+    <title>Ridwansells</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="fontawesome-free-7.0.1-web/fontawesome-free-7.0.1-web/css/all.min.css">
 </head>
@@ -205,4 +205,5 @@
 
     <script src="scripts.js"></script>
 </body>
+
 </html>
