--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ridwansells</title>
+    <title>Marketing Automation Specialist Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="fontawesome-free-7.0.1-web/fontawesome-free-7.0.1-web/css/all.min.css">
 </head>
@@ -37,8 +37,8 @@
         <h2>Case Studies</h2>
         <div class="works-gallery" id="worksGallery">
             <div class="work-item"><img src="past works/first mockup.png" alt="Work 1"><div class="work-overlay"><h3></h3></div></div>
-            <div class="work-item"><img src="assets/images/work2.jpg" alt="Work 2"><div class="work-overlay"><h3></h3></div></div>
-            <div class="work-item"><img src="assets/images/work3.jpg" alt="Work 3"><div class="work-overlay"><h3></h3></div></div>
+            <div class="work-item"><img src="past works/Live Simpely original.png" alt="Work 2"><div class="work-overlay"><h3></h3></div></div>
+            <div class="work-item"><img src="past works/real estate original.png" alt="Work 3"><div class="work-overlay"><h3></h3></div></div>
         </div>
     </section>
 
@@ -205,5 +205,4 @@
 
     <script src="scripts.js"></script>
 </body>
-
 </html>
