--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marketing Automation Specialist Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+    <!--<link rel="stylesheet" href="fontawesome-free-7.0.1-web/fontawesome-free-7.0.1-web/css/all.min.css">-->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
     <nav class="nav">
@@ -20,13 +22,13 @@
         </ul>
     </nav>
 
-    <!-- Hero Section (Redesigned, No Gradient) -->
+    <!-- Hero Section (Redesigned, No Gradient) --> 
     <section class="hero" id="home">
         <div class="hero-content">
             <h1>Are you ready to <strong class="headline">Save time, Increase ROI and Build loyal customer base??</strong></h1>
             <p>Transform Your Business with Marketing Automation, Email Marketing & Development, and CRM</p>
             <div class="cta-buttons">
-                <a href="#contact" class="cta cta-primary"><i class="fas fa-check"></i> Claim Free Audit</a>
+                <a href="#contact" class="cta cta-primary"><ion-icon name="checkmark"></ion-icon> Claim Free Audit</a>
                 <a href="https://calendly.com/adediniridwan/30min" target="_blank" class="cta cta-secondary">Book a Strategy session</a>
             </div>
         </div>
@@ -108,29 +110,29 @@
         <div class="testimonial-carousel" id="testimonialCarousel">
             <div class="testimonial-item">
                 <img src="Testimonials/barrybree.jpg" alt="Barrybree">
-                <p>"Boosted our email open rates by 30%!"</p>
+                <p>"Ridwan is such an expert in Email marketing and customer retention, he doesn't only execute your order but also counsel and brainstorm with you to see if that is the best solution for your brand"</p>
                 <h4>Barrybree Distribution</h4>
                 <button class="view-case">View Case Study</button>
                 <div class="case-study">
-                    <p>Case study details: This project involved optimizing email campaigns for a retail client, resulting in a 30% increase in open rates and 15% in conversions. We used advanced segmentation and A/B testing.</p>
+                    <p>I did market research and competitors analysis, to see why their campaign wasn't coverting, after that I took my time to do A/B testing to see what works for them and we were able to outsell their campaign with 15% increase in ROI.</p>
                 </div>
             </div>
             <div class="testimonial-item">
                 <img src="Testimonials/lokalfy.jpg" alt="Lokalfy">
-                <p>"Transformed our CRM workflow."</p>
+                <p>"He was very easy to work with, heed to corrections and work super fast. handle every project like they are his"</p>
                 <h4>Lokalfy</h4>
                 <button class="view-case">View Case Study</button>
                 <div class="case-study">
-                    <p>Case study details: Implemented custom CRM integrations for a B2B company, reducing lead response time by 40% and improving customer satisfaction scores.</p>
+                    <p>Helped setting up their mails in zoho, warm the mails up before settig up the customer automated email flow which resulted in 20% increase in sales .</p>
                 </div>
             </div>
             <div class="testimonial-item">
                 <img src="Testimonials/NPA LOGO UPDATED-04.png" alt="Next Pro Africa">
-                <p>"Game-changer for automation."</p>
+                <p>"He discovered a problem which we didn't notice and he brought our attention to it, he made us see how much money we were leaving on the table and his lead nurturing strategies proven to be a game changer for us."</p>
                 <h4>Next Pro Africa</h4>
                 <button class="view-case">View Case Study</button>
                 <div class="case-study">
-                    <p>Case study details: Automated marketing funnels for an e-commerce site, leading to a 25% sales uplift through personalized drip campaigns.</p>
+                    <p>Discovered how they were leaking out their leads with their weak nurturing strategy, I started by segmenting their audience so that we can personalize each mail, I also automated their email flows which upturned their conversion in 30days.</p>
                 </div>
             </div>
         </div>
@@ -149,7 +151,7 @@
 
     <!-- Repeated CTAs -->
     <section class="cta-buttons">
-        <a href="#contact" class="cta cta-primary">Claim Free Audit</a>
+        <a href="#contact" class="cta cta-primary"><ion-icon name="checkmark"></ion-icon>Claim Free Audit</a>
         <a href="https://calendly.com/adediniridwan/30min" target="_blank" class="cta cta-secondary">Book a strategy section</a>
     </section>
 
@@ -196,14 +198,13 @@
     <footer class="footer">
         <p>&copy; 2025 Ridwansells. All rights reserved.</p>
         <div class="social-links">
-            <a href="https://linkedin.com/yourprofile" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://twitter.com/yourprofile" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://instagram.com/yourprofile" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://facebook.com/yourprofile" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="mailto:adediniridwan@gmail.com" aria-label="Email"><ion-icon name="mail-outline"></ion-icon></a>
+                <a href="https://www.linkedin.com/in/adedini-ridwan-665160258" aria-label="LinkedIn"><ion-icon name="logo-linkedin"></ion-icon></a>
+                <a href="tel:+2347062638690" aria-label="Phone"><ion-icon name="call-outline"></ion-icon></a> 
+                <a href="https://twitter.com/ridwanadedini" aria-label="twitter"><ion-icon name="logo-twitter"></ion-icon></a>
         </div>
     </footer>
 
     <script src="scripts.js"></script>
 </body>
 </html>
-
