--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marketing Automation Specialist Portfolio</title>
+    <title>Ridwansells</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io (2)/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io (2)/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io (2)/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io (2)/site.webmanifest">
     <!--<link rel="stylesheet" href="fontawesome-free-7.0.1-web/fontawesome-free-7.0.1-web/css/all.min.css">-->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
@@ -104,7 +108,7 @@
         </div>
     </section>
 
-    <!-- Testimonials Section -->
+    <!-- Testimonials Section 
     <section class="testimonials">
         <h2>Testimonials</h2>
         <div class="testimonial-carousel" id="testimonialCarousel">
@@ -136,8 +140,9 @@
                 </div>
             </div>
         </div>
-    </section>
-
+    </section> -->
+<script src="https://widget.senja.io/widget/af12536b-88a2-4819-811b-9137c4eec40c/platform.js" type="text/javascript" async></script>
+<div class="senja-embed" data-id="af12536b-88a2-4819-811b-9137c4eec40c" data-mode="shadow" data-lazyload="false" style="display: block; width: 100%;"></div>
     <!-- About Me Section -->
     <section class="about">
         <div class="about-text">
