--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <footer class="footer">
         <p>&copy; 2025 Ridwansells. All rights reserved.</p>
         <div class="social-links">
-            <a href="mailto:adediniridwan@gmail.com" aria-label="Email"><ion-icon name="mail-outline"></ion-icon></a>
+            <a href="mailto:admin@ridwansells.online" aria-label="Email"><ion-icon name="mail-outline"></ion-icon></a>
                 <a href="https://www.linkedin.com/in/adedini-ridwan-665160258" aria-label="LinkedIn"><ion-icon name="logo-linkedin"></ion-icon></a>
                 <a href="tel:+2347062638690" aria-label="Phone"><ion-icon name="call-outline"></ion-icon></a> 
                 <a href="https://twitter.com/ridwanadedini" aria-label="twitter"><ion-icon name="logo-twitter"></ion-icon></a>
@@ -213,3 +213,4 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
