--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <div class="works-gallery" id="worksGallery">
             <div class="work-item"><img src="past works/first mockup.png" alt="Work 1"><div class="work-overlay"><h3></h3></div></div>
             <div class="work-item"><img src="past works/Live Simpely original.png" alt="Work 2"><div class="work-overlay"><h3></h3></div></div>
-            <div class="work-item"><img src="past works/real estate original.png" alt="Work 3"><div class="work-overlay"><h3></h3></div></div>
+            <div class="work-item"><img src="past works/Atlas container.png" alt="Work 3"><div class="work-overlay"><h3></h3></div></div>
+            <div class="work-item"><img src="past works/real estate original.png" alt="Work 4"><div class="work-overlay"><h3></h3></div></div>
         </div>
     </section>
 
@@ -213,4 +214,3 @@
     <script src="scripts.js"></script>
 </body>
 </html>
-
